--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,1 +1,11 @@
 /* css styles */
+.navbar {
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Custom container width for larger screens */
+@media (min-width: 1400px) {
+  .container {
+    max-width: 1200px;
+  }
+}
